# totoms-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
totoms_cli/: __init__.py  generator.py  main.py  naming.py  prompts.py
totoms_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
totoms_cli/templates/: Dockerfile.j2  app.py.j2  config.py.j2  hello.py.j2  requirements.txt.j2
totoms_cli/templates/agent/: agent.py.j2  tools.py.j2
totoms_cli/templates/node/: Dockerfile.j2  package.json.j2  tsconfig.json.j2
totoms_cli/templates/node/src/: Config.ts.j2  index.ts.j2
totoms_cli/templates/node/src/dlg/: ExampleDelegate.ts.j2
totoms_cli/templates/node/terraform/: microservice.tf.j2
totoms_cli/templates/node/workflows/: release-dev.yml.j2  release-prod.yml.j2
totoms_cli/templates/terraform/: agent.tf.j2  microservice.tf.j2
totoms_cli/templates/workflows/: release-dev.yml.j2  release-prod.yml.j2
