[project]
name = "totoms-cli"
version = "0.1.0"
description = "CLI tool to scaffold Toto microservices and agents"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "Jinja2>=3.1.0",
]

[project.scripts]
totoms = "totoms_cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["totoms_cli*"]

[tool.setuptools.package-data]
totoms_cli = ["templates/**/*"]
